# farm_saas

./: .coverage  .gitignore  =1.13.0  CLAUDE.md  README.md  SKILLS_INDEX.md  SOLUCAO_CORS_FINAL.md  add_fornecedor_fields.sql  agrosaas.db  check_tipos.py  check_tipos_operacao.sql  conftest.py  docker-compose.yml  package-lock.json  pnpm-lock.yaml  pyproject.toml
services/api/: .env.local  .pre-commit-config.yaml  CORS_TROUBLESHOOTING.md  DEBUGGING_500_ERRORS.md  IMPLEMENTACAO_UPGRADE_DOWNGRADE.md  SETUP_POSTGRESQL.md  __init__.py  agrosaas.db  apply_fornecedor_migration.py  check_cors.sh  check_db.py  check_db_tasks.py  diag_402.py  gen_token.py  inspect_env.py  main.py  pyproject.toml  seed.py  seed_estoque.py  seed_financeiro.py  setup_fase2.sh  start_backend.sh  start_server.sh  test_endpoint.py  test_password_recovery.py  test_smtp_direct.py  tmp_fix_db.py  verify_db_state.py
services/api/ambiental/: models.py  router.py  service.py
services/api/core/: base_service.py  config.py  constants.py  database.py  dependencies.py  exceptions.py
services/api/migrations/: env.py  migrations_manual.sql
services/api/notificacoes/: alertas_engine.py  models.py  router.py  schemas.py  service.py
services/api/pessoas/: models.py  router.py  service.py
services/api/rh/: models.py  router.py  schemas.py  service.py
services/api/scripts/: .env  audit_all_foreign_keys.py  backfill_fornecedores_pessoa.py  check_missing_fks.py  check_orphaned_data.py  check_tables.py  consolidar_fornecedores_duplicados.py  create_module.py  debug_smtp.py  diag_produtos.py  reset_mario.py  (+30 more)
(+1103 files in other folders)
